# Game

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .todos.json  AGENTS.md  CLAUDE.md  CONFIGURABLE_LIST_LIMITS_IMPLEMENTATION.md  Cargo.toml  Procfile.dev  README.md  Taskfile.yml  flake.nix  inventory_migration.patch  shell.nix
crates/core-ports/: Cargo.toml
crates/core-ports/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain-types/: Cargo.toml
crates/domain-types/src/: archetype.rs  asset_types.rs  disposition.rs  lib.rs  monomyth.rs  rule_system.rs  workflow.rs
crates/domain/src/: character_sheet.rs  error.rs  game_time.rs  ids.rs  lib.rs
crates/domain/src/aggregates/: character.rs  location.rs  mod.rs  narrative_event.rs  player_character.rs  scene.rs  world.rs
crates/domain/src/common/: datetime.rs  mod.rs  string.rs
crates/domain/src/entities/: challenge.rs  character.rs  character_content.rs  class_feature.rs  content_types.rs  event_chain.rs  feat.rs  gallery_asset.rs  game_flag.rs  generation_batch.rs  goal.rs  grid_map.rs  interaction.rs  item.rs  location.rs  location_state.rs  lore.rs  mod.rs  narrative_event.rs  observation.rs  player_character.rs  region.rs  region_state.rs  scene.rs  sheet_template.rs  skill.rs  spell.rs  staging.rs  story_event.rs  want.rs  workflow_config.rs  world.rs
crates/domain/src/events/: character_events.rs  combat_events.rs  mod.rs  narrative_event_events.rs  scene_events.rs
crates/domain/src/game_systems/: blades.rs  coc7e.rs  dnd5e.rs  fate_core.rs  mod.rs  pbta.rs  pf2e.rs  traits.rs
crates/domain/src/types/: archetype.rs  asset_types.rs  batch_status.rs  challenge_decisions.rs  character_sheet.rs  disposition.rs  mod.rs  monomyth.rs  mood.rs  rule_system.rs  session.rs  time_decisions.rs  workflow.rs
crates/domain/src/value_objects/: actantial_context.rs  activation_rules.rs  ad_hoc_outcomes.rs  archetype.rs  calendar.rs  character_state.rs  comfyui_config.rs  context_budget.rs  context_budget_enforcement.rs  dialogue_markers.rs  dice.rs  directorial.rs  disposition.rs  expression_config.rs  game_tools.rs  llm_context.rs  mod.rs  mood.rs  names.rs  presence_ttl.rs  prompt_templates.rs  quantity.rs  queue_data.rs  region.rs  relationship.rs  rule_system.rs  settings.rs  staging_context.rs  stat.rs  stat_block.rs  world_state.rs
crates/engine/: .env.example  .gitignore  BATCH4_CHANGES.md  CLAUDE.md  CODE_SNIPPETS.md  COMPLETION_SUMMARY.md  Cargo.toml  Dockerfile  FILES_AND_PATHS.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  PHASE_22C_DTO_REFERENCE.md  PHASE_22C_FILE_INDEX.md  PHASE_22C_IMPLEMENTATION_SUMMARY.md  PHASE_22C_QUICK_REFERENCE.md  PHASE_22C_STATUS.md  PHASE_22C_SUMMARY.txt  README.md  TASK_1_1_3_INDEX.md  TOOL_CALLING_GUIDE.md  TOOL_CALLING_README.md  Taskfile.yml  cleanup_batch4.sh
crates/engine-adapters/: Cargo.toml
crates/engine-adapters/src/: lib.rs
crates/engine-adapters/src/infrastructure/: adapter_state.rs  challenge_port_adapters.rs  clock.rs  comfyui.rs  config.rs  connection_port_adapters.rs  context_budget.rs  environment_adapter.rs  file_storage.rs  mod.rs  ollama.rs  player_action_port_adapters.rs  port_adapters.rs  ports.rs  ports_challenge_adapters.rs  ports_connection_adapters.rs  ports_scene_adapters.rs  queue_workers.rs  random_adapter.rs  scene_adapters.rs  scene_port_adapters.rs  session_adapter.rs  settings_loader.rs  staging_port_adapters.rs  state_broadcast.rs  suggestion_enqueue_adapter.rs  websocket.rs  websocket_event_subscriber.rs  websocket_helpers.rs  world_connection_manager.rs  world_connection_port_adapter.rs  world_state_manager.rs
crates/engine-adapters/src/run/: server.rs
crates/engine-app/: Cargo.toml
crates/engine-app/src/application/: mod.rs
crates/engine-app/src/services/: mod.rs
crates/engine-composition/: Cargo.toml
crates/engine-composition/src/: app_state.rs  asset_services.rs  core_services.rs  dm_action_enqueue_adapter.rs  event_infra.rs  game_services.rs  lib.rs  llm_suggestion_queue_adapter.rs  player_services.rs  queue_services.rs  use_case_adapters.rs  use_cases.rs
crates/engine-dto/: Cargo.toml
crates/engine-dto/src/: lib.rs  llm.rs  persistence.rs  queue.rs  request_context.rs  staging.rs
crates/engine-ports/: Cargo.toml
crates/engine-ports/src/: lib.rs
crates/engine-ports/src/inbound/: app_state_port.rs  asset_use_case_port.rs  challenge_use_case_port.rs  connection_use_case_port.rs  generation_use_case_port.rs  inventory_use_case_port.rs  mod.rs  movement_use_case_port.rs  narrative_event_use_case_port.rs  observation_use_case_port.rs  player_action_use_case_port.rs  prompt_template_use_case_port.rs  queue_use_case_port.rs  request_handler.rs  scene_use_case_port.rs  settings_use_case_port.rs  staging_use_case_port.rs  use_case_context.rs  (+5 more)
crates/engine-runner/: Cargo.toml  README.md
crates/engine-runner/src/: main.rs
crates/engine/specs/: first-draft.md  migration-strategy.md  neo4j-graph-schema.md
crates/engine/src/: app.rs  game_tools.rs  lib.rs  llm_context.rs  main.rs  prompt_templates.rs  queue_types.rs
crates/engine/test_data/: README.md
crates/player/: CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  index.html  tailwind.config.js
crates/player-adapters/: Cargo.toml
crates/player-adapters/src/: lib.rs
crates/player-app/: Cargo.toml
crates/player-ports/: Cargo.toml
crates/player-ports/src/: lib.rs  session_types.rs
crates/player-runner/: Cargo.toml  Dioxus.toml
crates/player-runner/src/: lib.rs  main.rs
crates/player-ui/: Cargo.toml
crates/player-ui/src/: lib.rs
crates/player/src/: lib.rs  main.rs  runner.rs  session_types.rs
crates/player/styles/: input.css
crates/protocol/: Cargo.toml
crates/protocol/src/: app_events.rs  character_sheet.rs  dto.rs  ids.rs  lib.rs  messages.rs  requests.rs  responses.rs  rule_system.rs  types.rs
crates/shared/: Cargo.toml
crates/shared/src/: app_events.rs  character_sheet.rs  dto.rs  lib.rs  messages.rs  requests.rs  responses.rs  settings.rs  types.rs  workflow.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
(+1691 files in other folders)
