[package]
name = "wrldbldr-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Domain - Core domain types and invariants"

[dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
# NOTE: rand removed for hexagonal architecture purity - RNG is now injected via closure
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []

[lints]
workspace = true
