[package]
name = "wrldbldr-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Domain - Core domain types and invariants"

[dependencies]
# Shared vocabulary types - the innermost layer
wrldbldr-domain-types = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
# NOTE: anyhow removed for hexagonal architecture purity - domain uses thiserror instead
# NOTE: rand removed for hexagonal architecture purity - RNG is now injected via closure
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []

[lints]
workspace = true
