[package]
name = "wrldbldr-engine-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Engine Adapters - Infrastructure adapters"

[features]
default = []
testing = []

[dependencies]
# Hexagonal architecture: adapters depend on ports, NOT app layer
# The engine-app dependency has been removed to enforce proper hexagonal boundaries
wrldbldr-engine-composition = { workspace = true }
wrldbldr-engine-dto = { workspace = true }
wrldbldr-engine-ports = { workspace = true }
wrldbldr-protocol = { workspace = true }
wrldbldr-domain = { workspace = true }

# Engine adapter deps
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
neo4rs = { workspace = true }
reqwest = { workspace = true }

# Async runtime
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# IDs, time
uuid = { workspace = true }
chrono = { workspace = true }

# Error/logging
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# SQLite
sqlx = { workspace = true }

# Validation
validator = { workspace = true }

# Async utilities
futures-util = { workspace = true }
futures-channel = { workspace = true }
tokio-util = { workspace = true }

# Concurrent collections
dashmap = { workspace = true }

rand = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }

[lints]
workspace = true
