[package]
name = "wrldbldr-engine-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Engine App - Application services and use-cases"

[dependencies]
wrldbldr-domain = { workspace = true }
wrldbldr-protocol = { workspace = true }
wrldbldr-engine-ports = { workspace = true }

# Async runtime
tokio = { workspace = true }

async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
wrldbldr-engine-ports = { workspace = true, features = ["testing"] }
wrldbldr-engine-dto = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
