[package]
name = "wrldbldr-engine-composition"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Engine Composition - AppState and service container types"

[dependencies]
# Composition layer: defines service containers using port traits
# No adapter dependency - adapters are only wired in by the runner
wrldbldr-domain = { workspace = true }
wrldbldr-engine-ports = { workspace = true }
wrldbldr-protocol = { workspace = true }

# Minimal runtime deps
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
# Enable testing feature for mock types in tests
wrldbldr-engine-ports = { workspace = true, features = ["testing"] }
anyhow = { workspace = true }

[lints]
workspace = true
