[package]
name = "wrldbldr-engine-composition"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Engine Composition - AppState and service container types"

[dependencies]
# Composition layer: defines service containers using port traits
# Now depends on engine-app for internal service traits (NOT ports)
wrldbldr-domain = { workspace = true }
wrldbldr-engine-ports = { workspace = true }
wrldbldr-engine-app = { workspace = true }
wrldbldr-protocol = { workspace = true }

# Minimal runtime deps
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
# Enable testing feature for mock types in tests
wrldbldr-engine-ports = { workspace = true, features = ["testing"] }
anyhow = { workspace = true }

[lints]
workspace = true
