[package]
name = "wrldbldr-engine-dto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Engine DTOs - Shared data types for engine internals"

[dependencies]
wrldbldr-protocol = { workspace = true }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
