[package]
name = "wrldbldr-engine-ports"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Engine Ports - Engine-specific port traits"

[dependencies]
wrldbldr-domain = { workspace = true }
wrldbldr-protocol = { workspace = true }
wrldbldr-engine-dto = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
# Note: tokio intentionally not included - ports should only need async-trait

[dev-dependencies]
mockall = { workspace = true }

[features]
default = []
testing = ["mockall"]

[dependencies.mockall]
workspace = true
optional = true

[lints]
workspace = true
