[package]
name = "wrldbldr-engine-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Engine Runner - Backend composition root"

[dependencies]
wrldbldr-engine-adapters = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "wrldbldr-engine"
path = "src/main.rs"
