[package]
name = "wrldbldr-engine-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Engine Runner - Backend composition root"

[dependencies]
wrldbldr-domain = { workspace = true }
wrldbldr-engine-app = { workspace = true }
wrldbldr-engine-ports = { workspace = true }
wrldbldr-engine-adapters = { workspace = true }
wrldbldr-protocol = { workspace = true }

# Web framework
axum = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }

# Database
sqlx = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "wrldbldr-engine"
path = "src/main.rs"
