[package]
name = "wrldbldr-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Engine - Backend API for TTRPG world management"

[dependencies]
# Internal crates
wrldbldr-protocol = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Unique identifiers
uuid = { workspace = true }

# Random number generation
rand = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Neo4j driver
neo4rs = { workspace = true }

# WebSocket server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# HTTP client for Ollama and ComfyUI
reqwest = { workspace = true }

# Async utilities
futures-util = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# SQLite for queue persistence
sqlx = { workspace = true }

# Validation
validator = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "wrldbldr-engine"
path = "src/main.rs"
