[package]
name = "wrldbldr-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Engine - Backend API for TTRPG world management"

[dependencies]
# Internal crates (composition root only)
wrldbldr-engine-adapters = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "wrldbldr-engine"
path = "src/main.rs"
