[package]
name = "wrldbldr-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Engine - All server-side code"

[dependencies]
# Internal crates
wrldbldr-domain = { workspace = true }
wrldbldr-protocol = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
neo4rs = { workspace = true }

# Async runtime
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }

# HTTP client (for LLM, ComfyUI)
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# SQLite (for queues)
sqlx = { workspace = true }

# IDs, time
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Environment
dotenvy = { workspace = true }

# Concurrent collections
dashmap = { workspace = true }

# Random
rand = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "wrldbldr-engine"
path = "src/main.rs"
