[package]
name = "wrldbldr-player-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Player App - Application services for client"

[dependencies]
wrldbldr-domain = { workspace = true }
wrldbldr-protocol = { workspace = true }
wrldbldr-player-ports = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
regex-lite = { workspace = true }
futures-channel = { workspace = true }

[lints]
workspace = true
