[package]
name = "wrldbldr-player-ports"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Player Ports - Player-specific port traits"

[features]
testing = ["mockall"]

[dependencies]
wrldbldr-domain = { workspace = true }
wrldbldr-protocol = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
mockall = { workspace = true, optional = true }

[dev-dependencies]
mockall = { workspace = true }

[lints]
workspace = true
