[package]
name = "wrldbldr-player-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Player UI - Presentation and routing"

[dependencies]
wrldbldr-player-app = { workspace = true }
wrldbldr-player-ports = { workspace = true }
wrldbldr-protocol = { workspace = true }
wrldbldr-domain = { workspace = true }

# Dioxus
dioxus = { workspace = true }

# Shared
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }


futures-util = { workspace = true }
regex-lite = { workspace = true }

# Desktop
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.7.2", features = ["desktop", "router"] }

# WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.7.2", features = ["web", "router"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
gloo-timers = { workspace = true }
gloo-net = { workspace = true }

[lints]
workspace = true
