[package]
name = "wrldbldr-player"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Player - TTRPG gameplay client with PC and DM views"

[dependencies]
# Internal crates (composition root only)
wrldbldr-player-ui = { workspace = true }
wrldbldr-player-adapters = { workspace = true }
wrldbldr-player-app = { workspace = true }
wrldbldr-player-ports = { workspace = true }

# Dioxus UI framework - features controlled by build target
dioxus = { workspace = true }

# Logging
tracing = { workspace = true }

# Desktop-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.7.2", features = ["desktop", "router"] }
tracing-subscriber = { workspace = true }

# Web/WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.7.2", features = ["web", "router"] }
console_error_panic_hook = { workspace = true }
tracing-wasm = { workspace = true }

[features]
default = []

[lints]
workspace = true

[[bin]]
name = "wrldbldr-player"
path = "src/main.rs"
