[package]
name = "wrldbldr-player"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Player - TTRPG gameplay client with PC and DM views"

[dependencies]
# Internal crates (composition root only)
wrldbldr-player-runner = { workspace = true }
wrldbldr-player-adapters = { workspace = true }
wrldbldr-player-app = { workspace = true }
wrldbldr-player-ports = { workspace = true }

# Logging
tracing = { workspace = true }

# Desktop-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { workspace = true }

# Web/WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
tracing-wasm = { workspace = true }
web-sys = { workspace = true }
getrandom = { workspace = true }

[features]
default = []

[lints]
workspace = true

[[bin]]
name = "wrldbldr-player"
path = "src/main.rs"
