[package]
name = "wrldbldr-player"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Player - unified client (UI + app + infrastructure)"

[features]
default = []
testing = []

[lints]
workspace = true

[dependencies]
wrldbldr-domain = { workspace = true }
wrldbldr-shared = { workspace = true }

# Shared
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
futures-channel = { workspace = true }

# Dioxus (feature-selected per target)
dioxus = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Runtime + desktop
# (keep full tokio since adapters use it)
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
rand = { workspace = true }
directories = { workspace = true }
tracing-subscriber = { workspace = true }

# Dioxus desktop
# Note: dioxus crate needs the desktop feature for native
# We keep it explicit here to match the old runner/ui.
dioxus = { version = "0.7.2", features = ["desktop", "router"] }
dioxus-desktop = { version = "0.7.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM runtime
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
tracing-wasm = { workspace = true }
gloo-timers = { workspace = true }
gloo-net = { workspace = true }
getrandom = { workspace = true }
send_wrapper = { workspace = true, features = ["futures"] }

# Dioxus web
# Note: dioxus crate needs the web feature for wasm
# We keep it explicit here to match the old runner/ui.
dioxus = { version = "0.7.2", features = ["web", "router"] }

[[bin]]
name = "wrldbldr-player"
path = "src/main.rs"
