[package]
name = "wrldbldr-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Protocol - Shared types for Engine and Player communication"

[dependencies]
# Shared vocabulary types (innermost layer)
wrldbldr-domain-types = { workspace = true }

# Domain types - needed for entity-to-DTO conversions
# TODO: Phase 3 - Move From<Domain> impls to adapters to remove this dependency
wrldbldr-domain = { workspace = true }

# Serialization (required for wire protocol)
serde = { workspace = true }
serde_json = { workspace = true }

# Unique identifiers - with js feature for WASM compatibility
uuid = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }

[lints]
workspace = true
