[package]
name = "wrldbldr-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Protocol - Shared types for Engine and Player communication"

[dependencies]
# Shared vocabulary types (innermost layer)
# Protocol uses only the pure vocabulary types from domain-types
wrldbldr-domain-types = { workspace = true }

# NOTE: wrldbldr-domain dependency was removed as part of hexagonal architecture refactoring.
# All domain→protocol conversions are now handled in engine-adapters or engine-app.

# Serialization (required for wire protocol)
serde = { workspace = true }
serde_json = { workspace = true }

# Unique identifiers - with js feature for WASM compatibility
uuid = { workspace = true }

# Date/time handling
chrono = { workspace = true }

[lints]
workspace = true
