[package]
name = "wrldbldr-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WrldBldr Protocol - Shared types for Engine and Player communication"

[dependencies]
# Domain types - protocol uses vocabulary types from domain::types
wrldbldr-domain = { workspace = true }

# NOTE: Protocol depends on domain for the shared vocabulary types (domain::types module).
# Domain→protocol conversions are handled in engine-adapters or engine-app.

# Serialization (required for wire protocol)
serde = { workspace = true }
serde_json = { workspace = true }

# Unique identifiers - with js feature for WASM compatibility
uuid = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

[lints]
workspace = true
